Style: Ensure consistant contrast for code blocks in zebra tables

--- a/pep_sphinx_extensions/pep_theme/static/style.css
+++ b/pep_sphinx_extensions/pep_theme/static/style.css
@@ -41,7 +41,10 @@
     --colour-scrollbar: var(--light, #ccc) var(--dark, #333);
     --colour-rule-strong: var(--light, #888) var(--dark, #777);
     --colour-rule-light: var(--light, #ddd) var(--dark, #222);
-    --colour-inline-code: var(--light, #f8f8f8) var(--dark, #333);
+    --colour-inline-code-bg: var(--light, #eee) var(--dark, #333);
+    --colour-inline-code-text: var(--light, #222) var(--dark, #ccc);
+    --colour-inline-code-accent-bg: var(--light, #ddd) var(--dark, #444);
+    --colour-inline-code-accent-text: var(--light, #111) var(--dark, #ccc);
     --colour-error: var(--light, #faa) var(--dark, #800);
     --colour-warning: var(--light, #fca) var(--dark, #840);
     --colour-caution: var(--light, #ffa) var(--dark, #550);
@@ -152,8 +155,9 @@ code {
     overflow-wrap: anywhere;
 }
 code.literal {
+    background-color: var(--colour-inline-code-bg);
+    color: var(--colour-inline-code-text);
     font-size: .8em;
-    background-color: var(--colour-inline-code);
 }
 pre {
     overflow-x: auto;
@@ -234,6 +238,10 @@ table caption {
 }
 table tbody tr:nth-of-type(odd) {
     background-color: var(--colour-background-accent-light);
+}
+table tbody tr:nth-of-type(odd) code.literal {
+    background-color: var(--colour-inline-code-accent-bg);
+    color: var(--colour-inline-code-accent-text);
 }
 table th,
 table td {
